2005-02-16  Moritz Schulte  <moritz@g10code.com>

	* mpiutil.c (_gcry_mpi_alloc_limb_space): Rewritten, fixed memory
	corruption.

2005-01-05  Werner Koch  <wk@g10code.com>

	* hppa1.1/udiv-qrnnd.S: Reverted change of 2004-03-02 but kept the
	.align directive.

2004-12-16  Werner Koch  <wk@g10code.com>

	* config.links (mpi_optional_modules): Move entry for powerpc64
	before generic powerpc.  Suggested by Rafael Ávila de Espíndola.

2004-03-02  Werner Koch  <wk@gnupg.org>

	* hppa1.1/udiv-qrnnd.S: Alignment fix from Lamont Jones for
	Debian.  Taken from gnupg-1.3.

	* longlong.h: Added PowerPC 64 bit code from GPM-4.1.2 but didn't
	enable it yet.  Some whitespace changes in HPPA to fix assembler
	problems on HP-UX.  From gnupg 1.3

	* mpiutil.c (_gcry_mpi_alloc_limb_space): Better allocate
	something even if NLIMBS is passed as 0.

	* config.links: Updated system list to match gnupg 1.3.

2003-12-19  Werner Koch  <wk@gnupg.org>

	* mpi-internal.h [M_DEBUG]: Removed this unused code.
	(struct karatsuba_ctx): Added TSPACE_NLIMBS and	TP_NLIMBS.
	* mpiutil.c (_gcry_mpi_free_limb_space): Add arg NLIMBS and wipe
	out the memory.  Changed all callers.
	* mpih-mul.c (_gcry_mpih_mul_karatsuba_case): Keep track of
	allocated limbs.
	* mpi-div.c (_gcry_mpi_tdiv_qr): Keep track of allocated limbs.
	* mpi-mul.c (gcry_mpi_mul): Ditto.
	* mpi-pow.c (gcry_mpi_powm): Ditto.

	* Manifest: Empty new file.  Also add Manifest files to all CPU
	specific directories.
	* Makefile.am: Added.

	* mpiutil.c (gcry_mpi_randomize): Use gcry_create_nonce if WEAK
	random has been requested.

2003-10-31  Werner Koch  <wk@gnupg.org>

	* i386/mpih-rshift.S, i386/mpih-lshift.S: Use %dl and not %edx for
	testb; this avoids an assembler warning.

	* mpi-pow.c (gcry_mpi_powm): s/exp/expo/ to avoid shadowing warning.

2003-08-19  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (SUFFIXES): New variable.
	(.S.o, .S.lo, .S.obj): Rewritten.

2003-07-30  Moritz Schulte  <moritz@g10code.com>
